--- a/dashboard.html
+++ b/dashboard.html
@@ -38,9 +38,9 @@
             "January",
             "February",
             "March",
-            "Lowell",
-            "Cambridge",
-            "New Bedford"
+            "April",
+            "May",
+            "Juna"
           ],
           datasets: [
             {
