--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,13 @@
             "March",
             "April",
             "May",
-            "Juna"
+            "June",
+            "July",
+            "August",
+            "September",
+            "October",
+            "November",
+            "December"
           ],
           datasets: [
             {
