Months update dynamically

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="fullPage--header">
           <h1 class="header--text">car.bon</h1>
           <p>A carbon emissions tracker for your transportation</p>
+          <h3 class="btn"><a href="dashboard.html">Dashboard &rarr;</a></h3>
       </div>
   </body>
 </html>
