Forgot to commit this :sweat_smile:

--- a/dashboard.html
+++ b/dashboard.html
@@ -140,7 +140,7 @@
       let comparisonChart = new Chart(comparison, {
         type: "bar", // bar, horizontalBar, pie, line, doughnut, radar, polarArea
         data: {
-          labels: ["CO2 ppm you produced in the past week","Amount of ppm produced by the average American in one week"],
+          labels: ["CO2 ppm you produced in the past week","Amount of ppm produced by the average person in one week"],
 
           datasets: [
             {
